salvoes and hits in ships calss implemented

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -12,13 +12,26 @@
 <h1 id="player1Name"></h1>
 <h1 id="vs">vs</h1>
 <h1 id="player2Name"></h1>
-<table id="table">
-    <thead id="table-headers">
-    </thead>
-    <tbody id="table-rows">
-    </tbody>
-</table>
+<div class="tables">
 
+<div class="ship">
+
+    <table id="table">
+        <thead id="table-headers">
+        </thead>
+        <tbody id="table-rows">
+        </tbody>
+    </table>
+</div>
+    <div class="salvo">
+    <table id="table2">
+        <thead id="table-headers2">
+        </thead>
+        <tbody id="table-rows2">
+        </tbody>
+    </table>
+    </div>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="script/game.js"></script>
