leaderboad front done

--- a/src/main/resources/static/web/games.html
+++ b/src/main/resources/static/web/games.html
@@ -9,9 +9,23 @@
 </head>
 <body>
 
-<ol data-id="listGames"> Games
+<!--<ol data-id="listGames"> Games-->
 
-</ol>
+<!--</ol>-->
+<table data-id="leaderBoard">
+    <thead>
+    <tr>
+        <td>Name</td>
+        <td>Total</td>
+        <td>Won</td>
+        <td>Lost</td>
+        <td>Tied</td>
+    </tr>
+    </thead>
+    <tbody  data-id="leaderBoardBody">
+
+    </tbody>
+</table>
 
 
 
