log in, sign up and log out with entityresponse done

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -9,6 +9,9 @@
     <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
+<form id="logout-form" onsubmit="return false">
+    <button id="logOutBtn">Log out</button>
+</form>
 <h1 id="player1Name"></h1>
 <h1 id="vs">vs</h1>
 <h1 id="player2Name"></h1>
