add ships, implemente controller, and method js done.

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -15,6 +15,7 @@
 <h1 id="player1Name"></h1>
 <h1 id="vs">vs</h1>
 <h1 id="player2Name"></h1>
+<div id="alert"></div>
 <div class="tables">
 
 <div class="ship">
