--- a/src/main/resources/static/web/games.html
+++ b/src/main/resources/static/web/games.html
@@ -22,10 +22,9 @@
     <button id="logOutBtn">Log out</button>
 </form>
 
-
 <ol data-id="listGames"> Games
-
 </ol>
+<button id="create">Create game</button>
 
 <table data-id="leaderBoard">
     <thead>
