place ships rotate solved

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -32,11 +32,11 @@
         </table>
     </div>
     <div class="shipsboard">
-<div id="submarine" draggable="true" ondragstart="drag(event)"></div>
-<div id="destroyer" draggable="true" ondragstart="drag(event)"></div>
-<div id="patrol" draggable="true" ondragstart="drag(event)"></div>
-<div id="battleship" draggable="true" ondragstart="drag(event)"></div>
-<div id="carrier" draggable="true" ondragstart="drag(event)"></div>
+<div id="submarine" data-type="3" draggable="true" ondragstart="drag(event)"></div>
+<div id="destroyer" data-type="3" draggable="true" ondragstart="drag(event)"></div>
+<div id="patrol" data-type="2" draggable="true" ondragstart="drag(event)"></div>
+<div id="battleship" data-type="4" draggable="true" ondragstart="drag(event)"></div>
+<div id="carrier" data-type="5" draggable="true" ondragstart="drag(event)"></div>
         <!--<div id="submarine"class="draggable"></div>-->
         <!--<div id="destroyer" class="draggable"></div>-->
         <!--<div id="patrol" class="draggable"></div>-->
