--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -17,8 +17,11 @@
 <form id="logout-form" onsubmit="return false">
     <button id="logOutBtn">Log out</button>
 </form>
-<div class="statusships">Place your ships</div>
-<button class="ok">Ok</button>
+<div class="statusok">
+    <h2 class="statusships">Place your ships</h2>
+    <button class="ok">Im Ready</button>
+</div>
+
 <div id="playersInfo">
     <h1 id="player1Name"></h1>
     <h1 id="vs">vs</h1>
@@ -38,9 +41,25 @@
     <div class="shipsboard">
 
 <div id="submarine" data-type="3" data-style="shipab" draggable="true" ondragstart="drag(event)"></div>
+        <br>
+        <br>
+        <br>
+        <br>
 <div id="destroyer" data-type="3" data-style="shipab" draggable="true" ondragstart="drag(event)"></div>
+        <br>
+        <br>
+        <br>
+        <br>
 <div id="patrol" data-type="2" data-style="shipab" draggable="true" ondragstart="drag(event)"></div>
+        <br>
+        <br>
+        <br>
+        <br>
 <div id="battleship" data-type="4" data-style="shipab" draggable="true" ondragstart="drag(event)"></div>
+        <br>
+        <br>
+        <br>
+        <br>
 <div id="carrier" data-type="5" data-style="shipab" draggable="true" ondragstart="drag(event)"></div>
         <!--<div id="submarine"class="draggable"></div>-->
         <!--<div id="destroyer" class="draggable"></div>-->
