ships placemente now done

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -13,7 +13,7 @@
             crossorigin="anonymous"></script>
     <link href="styles/style.css" rel="stylesheet">
 </head>
-<body>
+<body data-style="gameview">
 <form id="logout-form" onsubmit="return false">
     <button id="logOutBtn">Log out</button>
 </form>
