salvos front and backend

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -80,6 +80,7 @@
     </table>
 </div>
     <div class="salvo">
+        <button id="oksalvo">Fire</button>
     <table id="table2">
         <thead id="table-headers2">
         </thead>
