salvos with some front done

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -22,14 +22,11 @@
     <button class="ok">Im Ready</button>
 </div>
 
-<div id="playersInfo">
-    <h1 id="player1Name"></h1>
-    <h1 id="vs">vs</h1>
-    <h1 id="player2Name"></h1>
-</div>
+
 <div id="alert"></div>
 
 <div class="placeShips">
+
     <div class="board">
         <table id="board">
             <thead id="board-headers">
@@ -71,7 +68,11 @@
 </div>
 <div class="tablesdiv">
 <div class="tables">
+
 <div class="ship">
+    <div id="playersInfo1">
+        <h1 id="player1Name"></h1>
+    </div>
     <table id="table">
         <thead id="table-headers">
         </thead>
@@ -79,16 +80,25 @@
         </tbody>
     </table>
 </div>
+
     <div class="salvo">
-        <button id="oksalvo">Fire</button>
+        <div id="playersInfo2">
+            <h1 id="player2Name"></h1>
+        </div>
+
     <table id="table2">
         <thead id="table-headers2">
         </thead>
         <tbody id="table-rows2">
         </tbody>
     </table>
+
     </div>
 </div>
+    <div class="fire">
+        <button id="oksalvo">Fire</button>
+        <img src="fire.png">
+    </div>
 </div>
 
 
