json hits on ships

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -73,6 +73,40 @@
     <div id="playersInfo1">
         <h1 id="player1Name"></h1>
     </div>
+    <div id="hits1">
+        <table class="hitsinfo">
+            <tr>
+                <td>Ship</td>
+                <td>Hits</td>
+                <td>Sunk</td>
+            </tr>
+            <tr>
+                <td>Destroyer</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Patrol</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Battleship</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Submarine</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Carrier</td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
     <table id="table">
         <thead id="table-headers">
         </thead>
@@ -84,6 +118,40 @@
     <div class="salvo">
         <div id="playersInfo2">
             <h1 id="player2Name"></h1>
+        </div>
+        <div id="hits1">
+            <table class="hitsinfo">
+                <tr>
+                    <td>Ship</td>
+                    <td>Hits</td>
+                    <td>Sunk</td>
+                </tr>
+                <tr>
+                    <td>Destroyer</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Patrol</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Battleship</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Submarine</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Carrier</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
         </div>
 
     <table id="table2">
