--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -26,9 +26,10 @@
         <p>We are under attack! Rebel spies have stolen the Death Star plans and they are attacking us.</p>
 
         <p>Our radars have been shot and we can't locate their ships. </p>
-        <p>Commander <span id="commanderp1"></span>, get your fleets on position and get ready for the battle.</p>
+        <p>Commander <span id="commanderp1"></span>, get your fleets in position and get ready for the battle.</p>
     </div>
 </section>
+    <button id="skip">Skip</button>
 </div>
 <div class="hidethis">
 <form id="logout-form" onsubmit="return false">
@@ -58,7 +59,7 @@
         <br>
         <br>
 
-<img src="styles/images/destroyer.png" id="submarine" data-type="3" data-style="shipab" draggable="true" ondragstart="drag(event)">
+<img src="styles/images/submarine.png" id="submarine" data-type="3" data-style="shipab" draggable="true" ondragstart="drag(event)">
         <br>
         <br>
         <br>
@@ -73,12 +74,12 @@
         <br>
         <br>
 
-<img src="styles/images/stardestroyerbattleship.png" id="battleship" data-type="4" data-style="shipab" draggable="true" ondragstart="drag(event)">
+<img src="styles/images/battleship.png" id="battleship" data-type="4" data-style="shipab" draggable="true" ondragstart="drag(event)">
         <br>
         <br>
         <br>
 
-<img src="styles/images/stardestroyer.png" id="carrier" data-type="5" data-style="shipab" draggable="true" ondragstart="drag(event)">
+<img src="styles/images/carrier.png" id="carrier" data-type="5" data-style="shipab" draggable="true" ondragstart="drag(event)">
         <!--<div id="submarine"class="draggable"></div>-->
         <!--<div id="destroyer" class="draggable"></div>-->
         <!--<div id="patrol" class="draggable"></div>-->
