DRY applied to logturn

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -29,7 +29,7 @@
         <p>Commander <span id="commanderp1"></span>, get your fleets in position and get ready for the battle.</p>
     </div>
 </section>
-    <button id="skip">Skip</button>
+    <h4 id="skip">SKIP</h4>
 </div>
 <div class="hidethis">
 <form id="logout-form" onsubmit="return false">
