--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -89,7 +89,9 @@
     </div>
 </div>
 <div class="tablesdiv">
-
+<div class="statusMessages">
+    <h1></h1>
+</div>
 <div class="tables">
 
 <div class="ship">
