--- a/src/main/resources/static/web/games.html
+++ b/src/main/resources/static/web/games.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Salvo!</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link href="styles/style.css" type="text/css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -24,11 +25,15 @@
 </form>
 <div class="boards">
     <div class="gameBoard">
+        <div class="title">
         <h3 class="games">Games</h3>
+            <button id="create">Create game</button>
+
+        </div>
         <ol data-id="listGames">
 
 </ol>
-        <button id="create">Create game</button>
+        <!--<button id="create">Create game</button>-->
     </div>
 
     <div class="gameBoards">
