--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ship Locations!</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
