--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -42,8 +42,8 @@
 </div>
 
 
-<div id="alert"></div>
-
+    <div id="alert2"></div>
+    <div id="alert"></div>
 <div class="placeShips">
 
     <div class="board">
@@ -145,7 +145,7 @@
         </tr>
         <tr>
             <td>Hits</td>
-            <td>Left</td>
+            <td>Ships Left</td>
         </tr>
         <!--<tr>-->
         <!--<td>Turn 1</td>-->
@@ -162,7 +162,7 @@
         </tr>
         <tr>
             <td>Hits</td>
-            <td>Left</td>
+            <td>Ships Left</td>
         </tr>
 
     </table>
