--- a/src/main/resources/static/web/games.html
+++ b/src/main/resources/static/web/games.html
@@ -54,6 +54,9 @@
     </div>
 
 </div>
+     <footer>
+        <p>Developed by Micaela Lescano</p>
+    </footer>
 </div>
 <script src="script/games.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
